--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -544,7 +544,9 @@
     @RenderSection("scriptsNumOne", false)
     @RenderSection("scriptsNumTwo", false)
     @RenderSection("scriptsNumThree", false)
+    @RenderSection("scriptsnew",false)
     @RenderSection("scriptsNumFour", false)
+    @RenderSection("scriptsnews", false)
 </body>
 
 </html>
