--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Slider/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Slider/Edit.cshtml
@@ -15,12 +15,12 @@
         <input type="hidden" name="Image" value="@Model.Image" />
     </div>
     <div class="form-group">
-        <label>Trendword</label>
+        <label>Name</label>
         <textarea asp-for="Name" id="Name" class="form-control"></textarea>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label>ClothType</label>
+        <label>Description</label>
         <textarea asp-for="Description" id="Description" class="form-control"></textarea>
 
         <span asp-validation-for="Description" class="text-danger"></span>
