--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
@@ -35,7 +35,7 @@
                 <th scope="row">@Html.Raw(item.Title)</th>
                 <td>@Html.Raw(item.Link)</td>
                 <td>@Html.Raw(item.LinkDescription)</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Description)</td>
                 <td>
                     <a href="/Admin/PageContact/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
                     <a href="/Admin/PageContact/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
