--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model PacketVm
+@*@model PacketVm
 
 <form method="post" enctype="multipart/form-data">
     <div>
@@ -23,4 +23,4 @@
     <button class="btn btn-black btn-success">
         Submit
     </button>
-</form>
+</form>*@
