--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/AboutMe.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/AboutMe.cshtml
@@ -17,7 +17,7 @@
                         @item.Name
                     </h2>
                     <p>
-                        @item.BioDescription
+                        @Html.Raw(item.BioDescription)
                     </p>
 
                     <ul class="about-social">
