--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
@@ -279,7 +279,7 @@
 </section>
 
 
-<section class="parallax section-holder" style="background-image:url('../images/blog/blog-7.jpg');">
+<section class="parallax section-holder" style="background-image:url('../images/bg.jpg');">
     <div class="container parallax-content">
         <div class="row">
             <div class="col-lg-10 offset-lg-1 alignc">
