--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@model IList<PacketToComponents>
-
+﻿@model IList<Packet>
+@{
+    List<PacketToComponents> packetToComponents = ViewBag.PacketToComponents;
+}
 <div>
     <a href="/Admin/Packet/Create" style="width:100%" class="btn btn-success">Add</a>
 </div>
@@ -15,12 +17,20 @@
         @foreach (var item in Model)
         {
 <tr>
-    <th scope="row">@item.packet.Name</th>
-    <th scope="row">@item.components.Name</th>
+    <th scope="row">@item.Name</th>
+
+    <th scope="row">@foreach (var item2 in packetToComponents)
+    {
+        if (item.Id==item2.PacketId)
+        {
+            @(item2.components.Name+ " ")
+        }
+    }</th>
     <td>
-            <a href="/Admin/Packet/Edit/@item.PacketId" style="color:green"><i class="fas fa-edit"></i></a>
-            <a href="/Admin/Packet/Delete/@item.PacketId" onclick="return confirm('Are you delete?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
-        </td>
-</tr>}
+        <a href="/Admin/Packet/Edit/@item.Id" style="color:green"><i class="fas fa-edit"></i></a>
+        <a href="/Admin/Packet/Delete/@item.Id" onclick="return confirm('Are you delete?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
+    </td>
+</tr>
+}
     </tbody>
 </table>
