--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Account/Login.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Account/Login.cshtml
@@ -45,7 +45,7 @@
                         </div>
                         <div class="form-group">
                             <button type="submit" class="form-control btn btn-success submit px-3 mt-4">Sign in</button>
-                            <a href="/Admin/Account/ForgetPassword" style="padding-left:170px">reset password</a>
+                            <a href="/Account/ForgetPassword" style="padding-left:170px">reset password</a>
                             @*<a asp-action="Login" asp-controller="Account" ><button type="submit" class="form-control btn btn-primary submit px-3 mt-4">Sign Up</button></a>*@
                         </div>
                         <div class="form-group d-md-flex">
