--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -228,9 +228,9 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="~/account/login">Login</a>
-                        <a class="collapse-item" href="~/account/ForgetPassword">Forgot Password</a>
-                        <a class="collapse-item" href="~/account/Logout">Logout</a>
+                        <a class="collapse-item" href="/account/login">Login</a>
+                        <a class="collapse-item" href="/account/ForgetPassword">Forgot Password</a>
+                        <a class="collapse-item" href="/account/Logout">Logout</a>
                         <div class="collapse-divider"></div>
                     </div>
                 </div>
