--- a/LawyerbackEnd/LawyerbackEnd/Views/Account/Login.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Account/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @model User
-
+@{
+    Layout = null;
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +31,7 @@
         <div style="margin-top:100px" class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
                 <div class="login-wrap p-0">
-                    <h3 class="mb-4 text-center">Have an account?</h3>
+                    <h3 class="mb-4 text-center" style="color:aqua">Have an account?</h3>
                     <form method="post" enctype="multipart/form-data">
                         <div class="form-group" style="margin-bottom:20px">
                             <input type="text" class="form-control" placeholder="Username" asp-for="Email">
@@ -41,23 +43,22 @@
                         </div>
                         <div class="form-group">
                             <button type="submit" class="form-control btn btn-success submit px-3 mt-4">Sign in</button>
-                            <a href="/Account/ForgetPassword" style="padding-left:170px">reset password</a>
+                            <a href="/Account/ForgetPassword" style="margin-top:25px;width:100%" class="btn btn-primary">reset password</a>
                             @*<a asp-action="Login" asp-controller="Account" ><button type="submit" class="form-control btn btn-primary submit px-3 mt-4">Sign Up</button></a>*@
                         </div>
                         <div class="form-group d-md-flex">
                             <div class="w-50">
-                                <label class="checkbox-wrap checkbox-primary">
+                                <label class="checkbox-wrap checkbox-primary" style="color:white">
                                     Remember Me
                                     <input type="checkbox" checked>
                                     <span class="checkmark"></span>
                                 </label>
                             </div>
                             <div class="w-50 text-md-right">
-                                <a href="#" style="color: #fff">Forgot Password</a>
                             </div>
                         </div>
                     </form>
-                    <p class="w-100 text-center">&mdash; Or Sign In With &mdash;</p>
+                    <p class="w-100 text-center" style="color:aqua">&mdash; Or Sign In With &mdash;</p>
 
                 </div>
             </div>
