--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Contact.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Contact.cshtml
@@ -45,11 +45,11 @@
 
                         <div class="row">
 
-                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Name"  class="comm-field" placeholder="Name" /></div>
-                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Email"  class="comm-field" placeholder="Email" /> </div>
-                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Subject"  class="comm-field" placeholder="Subject" /> </div>
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Name"  class="form-control" placeholder="Name"  required/></div>
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Email"  class="form-control" placeholder="Email" required/> </div>
+                            <div class="col-lg-4 margin-b32"><input type="text" asp-for="@Model.contact.Subject"  class="form-control" placeholder="Subject" required/> </div>
                         </div>
-                        <div class="margin-b32"><textarea asp-for="@Model.contact.Message" id="msg-contact" rows="5" placeholder="Message"></textarea></div>
+                        <div class="margin-b32"><textarea asp-for="@Model.contact.Message" id="msg-contact" rows="5" placeholder="Message" required></textarea></div>
                         <p class="antispam">Leave this empty: <input type="text" name="url" /></p>
                         <button type="submit" class="btn btn-primary">Submit</button>
 
