--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
@@ -8,9 +8,17 @@
     </div>
 }
 
-<div>
-    <a href="/Admin/Service/Create" class="btn btn-success" style="width:100%">Add new slider</a>
-</div>
+@section styles{
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+}
+<h1>Index</h1>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
+    Create
+</button>
+
+@*<div>
+        <a href="/Admin/Service/Create" class="btn btn-success" style="width:100%">Add new slider</a>
+    </div>*@
 
 <table class="table table-bordered">
     <thead>
@@ -61,8 +69,24 @@
             <div class="modal-body">
                 <form method="post">
                     <div class="mb-3">
-                        <label class="form-label">Name</label>
+                        <label class="form-label">Header</label>
                         <input type="text" class="form-control" id="groupName">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Title</label>
+                        <input type="text" class="form-control" id="groupTitle">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description</label>
+                        <input type="text" class="form-control" id="groupDescription">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Buttontext</label>
+                        <input type="text" class="form-control" id="groupButtontext">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">ButtonLink</label>
+                        <input type="text" class="form-control" id="groupButtonLink">
                     </div>
                 </form>
             </div>
@@ -73,3 +97,36 @@
         </div>
     </div>
 </div>
+
+
+
+@section scripts{
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+
+    <script>
+        $(document).ready(() => {
+            $(document).on('click', '#btnCreate', (e) => {
+                $.ajax({
+                    url: '/Admin/Service/CreateModal',
+                    type: 'POST',
+                    data: {
+                        name: $('#groupName').val(),
+                        title: $('#groupTitle').val(),
+                        description: $('#groupDescription').val(),
+                        buttontext: $('#groupButtontext').val(),
+                        buttonLink: $('#groupButtonLink').val()
+                    },
+                    success: (response) => {
+                        if (response.hasOwnProperty('status') && response.status === 200) {
+                            location.href = '/Admin/Service/Index';
+                        } else if (response.status === 400) {
+                            alert("tapilmadi");
+                        }
+                    }
+                })
+            });
+        })
+    </script>
+        
+ }       
