--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -267,13 +267,8 @@
                     <!-- Topbar Search -->
                     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                   aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
+                            
+                            
                         </div>
                     </form>
 
@@ -455,7 +450,7 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="~/admin/#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="/account/Logout" >
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
                                 </a>
@@ -533,6 +528,7 @@
     <script src="~/admin/js/demo/chart-area-demo.js"></script>
     <script src="~/admin/js/demo/chart-pie-demo.js"></script>
     @RenderSection("scripts", false)
+    @RenderSection("scriptss", false)
     @RenderSection("scripts1", false)
     @RenderSection("scriptsNumOne", false)
     @RenderSection("scriptsNumTwo", false)
