--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
@@ -7,6 +7,10 @@
         @TempData["Success"]
     </div>
 }
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
+    Create
+</button>
+
 
 <div>
     <a href="/Admin/PageContact/Create" class="btn btn-success" style="width:100%">Add new practise Areas</a>
@@ -47,3 +51,76 @@
 
     </tbody>
 </table>
+
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createModalLabel"> Create Form</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+                    
+                    <div class="mb-3">
+                        <label class="form-label">Link <a href="https://fontawesome.com/v5/search?m=free" target="_blank">burdan goture bilersiz.</a></label>
+                        <input type="text" class="form-control" id="groupLink">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">link description</label>
+                        <input type="text" class="form-control" id="groupLinkDescription">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description</label>
+                        <textarea type="text" class="form-control" id="groupDescription"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button id="btnCreate" type="button" class="btn btn-primary">SaveChanges</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+@section scripts{
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script>
+        $(document).ready(() => {
+            $(document).on('click', '#btnCreate', (e) => {
+                $.ajax({
+                    url: '/Admin/PageContact/CreateModal',
+                    type: 'POST',
+                    data: {
+                        description: $('#groupLink').val(),
+                        buttontext: $('#groupLinkDescription').val(),
+                        buttonLink: $('#groupDescription').val()
+                    },
+                    success: (response) => {
+                        if (response.hasOwnProperty('status') && response.status === 200) {
+                            location.href('/Admin/pageContact/Index');
+                        } else if (response.status === 400) {
+                            alert("tapilmadi");
+                        }
+                    }
+                })
+            });
+        })
+    </script>
+}
+
+
+@section scriptss{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#groupDescription')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
