--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
@@ -9,9 +9,8 @@
 }
 
 @section styles{
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 }
-<h1>Index</h1>
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
     Create
 </button>
