--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AllContactsAreas/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AllContactsAreas/Index.cshtml
@@ -23,7 +23,7 @@
                     <th scope="row">@item.Id</th>
                     <td>@Html.Raw(item.Address)</td>
                     <td>@Html.Raw(item.AddressHeader)</td>
-                    <td>@item.PhoneHeader</td>
+                    <td>@Html.Raw(item.PhoneHeader)</td>
                     <td style="width:200px">@Html.Raw(item.Phone)</td>
                     <td>@Html.Raw(item.OfficeHeader)</td>
                     <td>@Html.Raw(item.Hours)</td>
