--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@model IList<Packet>
-@{
-    List<PacketToComponents> packetToComponents = ViewBag.PacketToComponents;
-}
+@{ List<PacketToComponents> packetToComponents = ViewBag.PacketToComponents; }
+
+
+@*<button type="button" class="btn btn-primary" style="width:100%;margin-bottom:30px" data-bs-toggle="modal" data-bs-target="#createModal">
+    Create with modal
+</button>*@
+
 <div>
     <a href="/Admin/Packet/ComponentsCreate" style="width:100%" class="btn btn-success">Add Components</a>
 </div>
@@ -10,7 +14,7 @@
         <tr>
             <th>Packet Name</th>
             <th>components</th>
-            <th>CRUD</th>
+            <th>Update</th>
         </tr>
     </thead>
     <tbody>
@@ -19,18 +23,69 @@
 <tr>
     <th scope="row">@item.Name</th>
 
-    <th scope="row">@foreach (var item2 in packetToComponents)
-    {
-        if (item.Id==item2.PacketId)
+    <th scope="row">
+        @foreach (var item2 in packetToComponents)
         {
-            @(item2.components.Name+ ",")
+            if (item.Id == item2.PacketId)
+            {@(item2.components.Name+ ",")}
         }
-    }</th>
+    </th>
     <td>
         <a href="/Admin/Packet/Edit/@item.Id" style="color:green"><i class="fas fa-edit"></i></a>
-        <a href="/Admin/Packet/Delete/@item.Id" onclick="return confirm('Are you delete?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
     </td>
-</tr>
-}
+</tr>}
     </tbody>
 </table>
+
+
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createModalLabel"> Create Form</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+
+                    <div class="mb-3">
+                        <label class="form-label">Packet Name <a href="https://fontawesome.com/v5/search?m=free" target="_blank">burdan goture bilersiz.</a></label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button id="btnCreate" type="button" class="btn btn-primary">SaveChanges</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+@section scripts{
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script>
+        $(document).ready(() => {
+            $(document).on('click', '#btnCreate', (e) => {
+                $.ajax({
+                    url: '/Admin/packet/CreateModal',
+                    type: 'POST',
+                    data: {
+                        name: $('#name').val()
+                    },
+                    success: (response) => {
+                        if (response.hasOwnProperty('status') && response.status === 200) {
+                            location.href('/Admin/pageContact/Index');
+                        } else if (response.status === 400) {
+                            alert("tapilmadi");
+                        }
+                    }
+                    })
+                });
+            })
+    </script>
+
+}
