--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
@@ -7,8 +7,8 @@
         @TempData["Success"]
     </div>
 }
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
-    Create
+<button type="button" class="btn btn-primary" style="width:100%;margin-bottom:30px" data-bs-toggle="modal" data-bs-target="#createModal">
+    Create with modal
 </button>
 
 
@@ -72,7 +72,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Description</label>
-                        <textarea type="text" class="form-control" id="groupDescription"></textarea>
+                        <input type="text" class="form-control" id="groupDescription">
                     </div>
                 </form>
             </div>
@@ -96,9 +96,9 @@
                     url: '/Admin/PageContact/CreateModal',
                     type: 'POST',
                     data: {
-                        description: $('#groupLink').val(),
+                        link: $('#groupLink').val(),
                         buttontext: $('#groupLinkDescription').val(),
-                        buttonLink: $('#groupDescription').val()
+                        description: $('#groupDescription').val()
                     },
                     success: (response) => {
                         if (response.hasOwnProperty('status') && response.status === 200) {
@@ -113,14 +113,3 @@
     </script>
 }
 
-
-@section scriptss{
-
-    <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
-    <script>
-        ClassicEditor.create(document.querySelector('#groupDescription')).catch(error => {
-            console.error(error);
-        });
-    </script>
-}
