--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -33,7 +33,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" >
+            <a class="sidebar-brand d-flex align-items-center justify-content-center">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -44,8 +44,6 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            
-
             <!-- Divider -->
             <hr class="sidebar-divider">
 
@@ -205,6 +203,24 @@
                     </div>
                 </div>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities10"
+                   aria-expanded="true" aria-controls="collapseUtilities10">
+                    <i class="fas fa-info"></i>
+                    <span>About me</span>
+                </a>
+                <div id="collapseUtilities10" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/attorneysBio/Index">Person Bio</a>
+                        <a class="collapse-item" href="~/admin/attorneysBio/Index">Pricing Page</a>
+                        <a class="collapse-item" href="~/admin/packet/Index">Packet Information</a>
+                        <a class="collapse-item" href="~/admin/Faq/Index">Faq Page</a>
+                    </div>
+                </div>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
 
@@ -232,7 +248,6 @@
             </li>
 
             <!-- Nav Item - Charts -->
-            
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -245,7 +260,7 @@
             <div class="sidebar-card d-none d-lg-flex">
                 <img class="sidebar-card-illustration mb-2" src="~/admin/img/undraw_rocket.svg" alt="...">
                 <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
-                <a class="btn btn-success btn-sm" href="~/admin/https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
+                <a class="btn btn-success btn-sm" >Upgrade to Pro!</a>
             </div>
 
         </ul>
