--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudiesDetails.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/CaseStudiesDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Case
 @{ List<Case> cases = ViewBag.Cases; }
 <!-- TOP IMAGE -->
-<div class="page-head " style="background-image:url('../images/cases/casBg.jpg');background-size:cover;">
+<div class="page-head " style="background-image:url('/images/cases/casBg.jpg');background-size:cover;">
     <div class="inner-desc">
         <div class="container">
             <h1 class="page-title">Case Single Page</h1>
