--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
             <div class="header-wrap header-wrap1">
                 <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="~/images/logo.png" alt="Lawyers"></a></div>
                 <div class="header-contact">
-                    <div class="header-info"><span class="info-circle"><i class="fa fa-phone"></i></span> 1-800-000-111</div>
-                    <div class="header-info"><span class="info-circle"><i class="fa fa-envelope"></i></span> contact@example.com</div>
+                    <div class="header-info"><span class="info-circle"><i class="fa fa-phone"></i></span> 051-978-83-78</div>
+                    <div class="header-info"><span class="info-circle"><i class="fa fa-envelope"></i></span> eminelekberov09@gmail.com</div>
                 </div>
                 <div class="nav-button-holder"> <button type="button" class="nav-button"> <span class="icon-bar"></span> </button></div>
             </div>
