--- a/LawyerbackEnd/LawyerbackEnd/Views/Account/Login.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Account/Login.cshtml
@@ -129,7 +129,7 @@
         <div class="login">
             <form method="post" enctype="multipart/form-data">
                 <label for="chk" aria-hidden="true">Login</label>
-                <input type="text" placeholder="Email" required="" asp-for="Email">
+                <input type="text" placeholder="User" required="" asp-for="Email">
                 <input type="password" placeholder="Password" asp-for="PasswordHash" required="">
                 <button>Login</button>
                 <a href="/Account/ForgetPassword" style="padding-left:200px;text-decoration:none">Forgot password?</a>
