--- a/LawyerbackEnd/LawyerbackEnd/Views/Account/ResetPassword.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Account/ResetPassword.cshtml
@@ -120,6 +120,9 @@
             <span id="pwd-length-2"></span>
             <!-- Validation Message - 1  -->
             <span id="message"></span>
+
+            <input type="hidden" name="Email" value="@Model.Email" />
+            <input type="hidden" name="Token" value="@Model.Token" />
             <input type="submit" class="btn btn-danger btn-block" value="update password" />
         </form>
     </div>
