--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
@@ -7,7 +7,7 @@
 </button>*@
 
 <div>
-    <a href="/Admin/Packet/ComponentsCreate" style="width:100%" class="btn btn-success">Add Components</a>
+    <a href="/Admin/Packet/Create" style="width:100%" class="btn btn-success">Add Components</a>
 </div>
 <table class="table table-bordered">
     <thead>
