--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Packet/Index.cshtml
@@ -8,6 +8,7 @@
 <div>
     <a href="/Admin/Packet/Create" style="width:100%" class="btn btn-success">Add Components</a>
 </div>
+
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -31,8 +32,7 @@
     <td>
         <a href="/Admin/Packet/Edit/@item.Id" style="color:green"><i class="fas fa-edit"></i></a>
     </td>
-</tr>
-}
+</tr>}
     </tbody>
 </table>
 
@@ -68,8 +68,7 @@
 @section scripts{
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
-    <script>
-        $(document).ready(() => {
+    <script>$(document).ready(() => {
             $(document).on('click', '#btnCreate', (e) => {
                 $.ajax({
                     url: '/Admin/packet/CreateModal',
@@ -86,7 +85,6 @@
                     }
                 })
             });
-        })
-    </script>
+        })</script>
 
 }
